--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styles.css" />
 	<title>Task Scheduler</title>
 </head>
+<body style="background-color: #F2F0EF;">
+    <header class="header">
+        <h1 class="header">Task Scheduler</h1>
+    </header>
+    <main class="main">
+        <div>
+            <input type="text" id="Task" placeholder="Enter a Task....">
+            <select id="priority">
+                <option value="top">High Priority</option>
+                <option value="middle">Medium Priority</option>
+                <option value="low">Low Priority</option>
+            </select>
+            <input type="date" id="deadline">
+            <button id="add-task" class="task button">Add Task</button>
 
-<body>
-	<header>
-		<h1>Task Scheduler</h1>
-	</header>
-	<main>
-		<div class="task-form">
-			<input type="text" id="task" placeholder="Enter task...">
-			<select id="priority">
-				<option value="top">Top Priority</option>
-				<option value="middle">Middle Priority</option>
-				<option value="low">Less Priority</option>
-			</select>
-			<input type="date" id="deadline">
-			<button id="add-task">Add Task</button>
-		</div>
-		<div class="task-list" id="task-list">
-			<!-- Tasks will be added here dynamically -->
-		</div>
-		<script src="logic.js"></script>
-	</main>
+        </div>
+        <div class="task-list" id="task-list">
+
+        </div>
+        <script src="logic.js"></script>
+    </main>
+    
 </body>
-
 </html>
